--- a/AppCollection/Info.plist
+++ b/AppCollection/Info.plist
@@ -28,7 +28,9 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>AppApp</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>AppAppIPad</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
